# new2.0v

./: README.md  ZakazLinz.Wpf.sln  index.html  main.py  package.json  requirements.txt  run-dev.cmd  tsconfig.json  vite.config.ts
OptiDesk/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OptiDesk.csproj
OptiDesk/Commands/: RelayCommand.cs
OptiDesk/Data/: OptiDeskDbContext.cs
OptiDesk/Models/: Client.cs  OrderMKL.cs  OrderMeridian.cs  PriceItem.cs
OptiDesk/Services/: SettingsService.cs
OptiDesk/ViewModels/: BaseViewModel.cs  OrdersMeridianViewModel.cs  OrdersMklViewModel.cs
OptiDesk/Views/Dialogs/: ClientPickerWindow.xaml  ClientPickerWindow.xaml.cs  ProductPickerWindow.xaml  ProductPickerWindow.xaml.cs  SimpleClientEditWindow.xaml  SimpleClientEditWindow.xaml.cs  SimpleProductEditWindow.xaml  SimpleProductEditWindow.xaml.cs
OptiDesk/Views/Legacy/: LegacyTabsView.xaml  LegacyTabsView.xaml.cs
OptiDesk/Views/Pages/: OrdersMeridianPage.xaml  OrdersMklPage.xaml  (+6 more)
ZakazLinz.Wpf/: App.xaml  App.xaml.cs  ZakazLinz.Wpf.csproj  app.manifest
ZakazLinz.Wpf/Models/: Settings.cs
ZakazLinz.Wpf/Services/: AutostartService.cs  Database.cs  ExportService.cs  SettingsService.cs
ZakazLinz.Wpf/Tray/: TrayIcon.xaml  TrayViewModel.cs
ZakazLinz.Wpf/ViewModels/: MainWindowViewModel.cs  SettingsViewModel.cs
ZakazLinz.Wpf/Views/: MainWindow.xaml  MainWindow.xaml.cs  OrdersMeridianView.xaml  OrdersMklView.xaml  SettingsView.xaml
src/: App.fixed.tsx  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: db.rs  export.rs  main.rs
