[package]
name = "ussurochki-desktop"
version = "0.1.0"
description = "УссурОчки.рф — Desktop на Tauri (Rust + React + Fluent)"
authors = ["Your Name"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["system-tray", "shell-open", "dialog"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
# SQLite (bundled to avoid external native SQLite dependency)
rusqlite = { version = "0.31", features = ["bundled"] }
# Windows-specific sound/autostart (позже добавим winapi usage)
# winreg можно использовать для автозапуска
winreg = "0.52"
# Домашняя директория для Desktop по умолчанию
home = "0.5"

[features]
# Пробросим фичу custom-protocol в tauri, чтобы tauri CLI не ругался
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = "symbols"